--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "ahmed127/elgammal",
+    "name": "elgammal/elgammal",
     "description": "Laravel Blade and Livewire components for UI scaffolding",
     "require": {
         "php": ">=8.1",
-        "ahmed127/elgammal": "1.*"
+        "ahmed127/elgammal": "^1.0"
     }
 }
